style.css
body {
    overflow: hidden;
    width: 100vw;
    height: 100vh;
}

canvas {
    height: 100%;
    object-fit: contain;
    
    image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
    image-rendering: -moz-crisp-edges;          /* Firefox                        */
    image-rendering: -o-crisp-edges;            /* Opera                          */
    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
    image-rendering: pixelated; /* Chrome */
    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
}

#canvasContainer {
    float: left;
    width: 100vh;
    height: 100vh;
}

#uiContainer {
    float: left;
    width: calc(100vw - 100vh);
    height: 100vh;
}

#uiContainer * {
    display: block;
}

p {
    margin-bottom: 0;
}

